.metadata/.plugins/org.eclipse.cdt.ui/ClassicCAN_CM4.build.log
22:22:06 **** Incremental Build of configuration Debug for project ClassicCAN_CM4 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DCORE_CM4 -DUSE_HAL_DRIVER -DSTM32H755xx -DUSE_NUCLEO_64 -c -I../Core/Inc -I../../Drivers/STM32H7xx_HAL_Driver/Inc -I../../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../../Drivers/BSP/STM32H7xx_Nucleo -I../../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:112:45: error: 'hfdcan' undeclared (first use in this function); did you mean 'hfdcan1'?
  112 |           if (HAL_FDCAN_AddMessageToTxFifoQ(hfdcan, &TxHeader, &TxData[i*8]) != HAL_OK) {
      |                                             ^~~~~~
      |                                             hfdcan1
../Core/Src/main.c:112:45: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:112:54: error: 'TxHeader' undeclared (first use in this function)
  112 |           if (HAL_FDCAN_AddMessageToTxFifoQ(hfdcan, &TxHeader, &TxData[i*8]) != HAL_OK) {
      |                                                      ^~~~~~~~
../Core/Src/main.c:112:65: error: 'TxData' undeclared (first use in this function)
  112 |           if (HAL_FDCAN_AddMessageToTxFifoQ(hfdcan, &TxHeader, &TxData[i*8]) != HAL_OK) {
      |                                                                 ^~~~~~
../Core/Src/main.c: In function 'FDCAN1_Conf':
../Core/Src/main.c:191:29: error: 'hfdcan' undeclared (first use in this function); did you mean 'hfdcan1'?
  191 |         if (HAL_FDCAN_Start(hfdcan)!= HAL_OK) {
      |                             ^~~~~~
      |                             hfdcan1
../Core/Src/main.c:198:9: error: 'TxHeader' undeclared (first use in this function)
  198 |         TxHeader.Identifier = 0x321;
      |         ^~~~~~~~
make: *** [Core/Src/subdir.mk:31: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

22:22:08 Build Failed. 6 errors, 0 warnings. (took 1s.90ms)

